Overflow image edge bug fixed.

--- a/css/product.css
+++ b/css/product.css
@@ -8,19 +8,19 @@
   margin: 17px 0 0 0;
   padding: 0px;
   border-radius: 10px;
-  box-shadow: 0px 0px 8px 2px #CCCCCC;
-  overflow: hidden;
+  box-shadow: 0px 0px 8px 2px #CCCCCC;                 
+  -moz-box-shadow: 0px 0px 8px 2px #CCCCCC;            
+  -webkit-box-shadow: 0px 0px 8px 2px #CCCCCC;
   position: relative;
-  cursor: default;
 }
 
-.vertical-center {
+.center-y {
   top: 50%;
   transform: translateY(-50%);
 }
 
 .product-pic {
-  height: 100%;
+  height: 80px;
   padding: 0;
   overflow: hidden;
   position: relative;
@@ -30,16 +30,17 @@
 .cropper {
   height: 100%;
   width: 70px;
-  border-radius: 10px 0 0 10px;
   overflow: hidden;
   position: relative;
-  box-shadow: 0px 0px 8px 2px #CCCCCC;    
-  background-color: black;
+  box-shadow: 0px 0px 8px 2px #CCCCCC;
+  -moz-box-shadow: 0px 0px 8px 2px #CCCCCC;
+  -webkit-box-shadow: 0px 0px 8px 2px #CCCCCC;
+  background-color: hsla(0, 0%, 0%, 1);
 }
 
 .checkhover {
   height: 100%;
-  width: 50px;
+  width: 70px;
   position: absolute;
   z-index: 90;
 }
@@ -51,11 +52,14 @@
 }
 
 .product-name {
-  width: 150px;
   font-size: 1.7em;
   padding: 0px;
   left: 90px;
   position: absolute;
+  -webkit-transition: color 0.4s ease;
+  -moz-transition: color 0.4s ease;
+  -o-transition: color 0.4s ease;
+  transition: color 0.4s ease;
 }
 
 .product-description {
@@ -78,22 +82,21 @@
 }
 
 .quantity-picker input {
-  height: 28px;
   width: 30px;
   border: 2px solid gray;
   border-radius: 3px;
 }
 
 .quantity-filler {
+  height: 28px;
   text-align: center;
 }
 
 .arrow {
-  height: 25px;
   width: 100%;
-  padding-top: 2px; 
   cursor: pointer;
-  position: relative;
+  height: 25px;
+  padding-top: 2px;
 }
 
 .arrow img {
@@ -101,9 +104,11 @@
 }
 
 .noselect {
-  user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -o-user-select: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+     -khtml-user-select: none; /* Konqueror */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
